<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ML Kit</string>
    <string name="picture">Picture</string>
    <string name="help_text">
      <b>HDR Viewfinder Demo:</b>\n\n

      Tap viewfinder to switch modes.\n\n

      <b>Normal:</b> Standard camera preview\n
      <b>Split:</b> Manual exposure control\n
      <b>HDR:</b> Fused HDR viewfinder\n\n

      Swipe up/down in Split/HDR modes to change manual exposure
      values.\n\n

      The left half of the viewfinder controls exposure time for
      even-numbered frames, and the right half of the viewfinder
      controls exposure time for odd-numbered frames
    </string>

    <string name="info">Info</string>

    <string name="camera_permission_rationale">This sample app requires camera and storage access in order to
        demo the API.</string>
    <string name="storage_permission_rationale">This sample app requires storage access in order to
        demo the API.</string>
    <string name="camera_no_good">No back-facing sufficiently capable camera available!</string>
    <string name="camera_disabled">Camera is disabled by device policy</string>
    <string name="camera_disconnected">Camera was disconnected before it was opened</string>
    <string name="camera_error">Camera service reported an error</string>
    <string name="camera_unknown">Unknown camera error: %s</string>
    <string name="camera_permission_denied_explanation">You\'ve denied a permission that the app
        needs for core functionality. If you selected &quot;don\'t ask again&quot; in the past then
        you need to use Settings to re-enable the permission.</string>

    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="cancel">cancel</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on">Front</string>
    <string name="toggle_turn_off">Back</string>
    <string name="desc_camera_source_activity">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity">Vision detectors demo with a still image</string>

    <string name="detector_live">Live</string>
    <string name="detector_still">Still</string>


    <string name="cloud_classification">Cloud Image Classification</string>
    <string name="cloud_text">Cloud Text Recognition</string>

    <string name="select_from_album">Select image from album</string>
    <string name="take_photo">Take photo</string>
    <string name="video_frame">Video stream</string>
    <string name="detector_still_desc">Cloud image recognition</string>
    <string name="detector_live_desc">Camera real-time continuous recognition</string>
    <string name="more_face_datas">More face data</string>
    <string name="versions">Version：</string>
    <string name="language_setting">Language settings</string>
    <string name="language_notice">Text recognition language settings</string>
    <string name="simplified_chinese">Simplified chinese</string>
    <string name="english_choose">English</string>
    <string name="japanese_choose">Japanese</string>
    <string name="korean_choose">Korean</string>
    <string name="latin_choose">Latin</string>
    <string name="get_data_failed">Failed to get data.</string>
    <string name="loading_data">Loading…</string>
    <string name="load_pictures">Load pictures</string>

    <string name="image_segmentation_s">Image Segmentation</string>
    <string name="photographed_shopping_s">Product Visual Search</string>
    <string name="face_detection_s">Face Detection</string>
    <string name="object_detection_s">Object Detection and Tracking</string>
    <string name="image_classification_s">Image Classification</string>
    <string name="idcard_recognition_s">ID Card Recognition</string>
    <string name="landmark_s">Landmark Recognition</string>
    <string name="text_detection_s">Text Recognition</string>
    <string name="document_recognition_s">Document Recognition</string>
    <string name="asr_s">ASR</string>
    <string name="bcr_s">Bank Card Recognition</string>
    <string name="ucr_s">General Card Recognition</string>


    <string name="image_segmentation">Segmentation</string>
    <string name="document_recognition">Document</string>
    <string name="translate">Translation</string>
    <string name="asr">ASR</string>
    <string name="bcr">BCR</string>
    <string name="ucr">UCR</string>
    <string name="photographed_shopping">Shopping</string>
    <string name="face_detection">Face</string>
    <string name="object_detection">Object</string>
    <string name="image_classification">Classification</string>
    <string name="icr">ICR</string>
    <string name="landmark">Landmark</string>
    <string name="text_detection">Text</string>
    <string name="all">all</string>
    <string name="coming_soon">coming soon</string>
    <string name="back">back</string>
    <string name="translate_v">Translate</string>
    <string name="language_recognition">Language Recognition</string>
    <string name="elapsed_time">Elapsed Time: </string>
    <string name="zero_character"> 0 character</string>
    <string name="image_category">Image</string>
    <string name="language_category">Language</string>
    <string name="text_category">Text</string>
    <string name="translate_text_hint">Machine Learning</string>

    <string name="background_substitution">Substitution</string>
    <string name="select_picture">Select Picture</string>
    <string name="cutout">Cutout</string>
    <string name="cut">Cut</string>
    <string name="cut_success">Cut success</string>
    <string name="save_success">Save success</string>

    <string name="replace_background">Background</string>
    <string name="save">Save</string>
    <string name="please_select_picture">Please select a picture to process~</string>
    <string name="click_add_picture">Click to add picture~</string>
    <string name="no_pic_neededSave">Null Image needed to save</string>

    <string name="target_object">Object</string>
    <string name="color">Color</string>

    <!--身份证识别-->
    <string name="icr_upload_self_photo">Upload photos of your ID card</string>
    <string name="icr_upload_face">Photo side</string>
    <string name="icr_upload_back">Other side</string>
    <string name="icr_hint_upload_valid_photo">Upload photos of your valid ID card.</string>
    <string name="icr_hint_image_not_complete">Something may be blocking important information in the photo. Retake the photo if needed.</string>
    <string name="icr_hint_ensure_user_info_security">Your personal information will be protected in accordance with the law.</string>
    <string name="recognition_results">Recognition results:</string>
    <string name="icr_mark">Note: For Mainland China Only</string>
    <string name="device_side">Device Side</string>
    <string name="cloud_side">Cloud Side</string>
    <!--通用卡证-->
    <string name="gcr_upload_self_photo">Upload photos of your card</string>
    <string name="gcr_upload">Upload card</string>
    <string name="hk_pass">Hong Kong, Macao and Taiwan pass</string>
    <string name="hk_id_card">Hong Kong Identity Card</string>
    <string name="home_card">Mainland Travel Permit for Hong Kong、Macao and Taiwan residents</string>
    <string name="click_to_switch"><u>Click to switch</u></string>
    <string name="vedio_tip">Recognizing, please align the edges.</string>
    <string name="capture_tip">Taking a picture, please align the edge.</string>

    <string name="bcr_upload_self_photo">"Please upload the bank card"</string>
    <string name="bcr_upload">Upload card</string>

    <string name="similar_products">Similar Products</string>
    <string name="empty">Empty</string>

</resources>
