<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/black_back"
            android:text="@string/back"
            android:textColor="@color/secondary_text_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/language_setting"
            android:textColor="@color/secondary_text_color"
            android:textSize="17sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/simple_cn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16sp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_content"
                android:text="@string/simplified_chinese" />

            <ImageView
                android:id="@+id/simple_cn_img"
                style="@style/image_language" />
        </RelativeLayout>

        <View style="@style/common_line" />

        <RelativeLayout
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/text_content"
                android:text="@string/english_choose" />

            <ImageView
                android:id="@+id/english_img"
                style="@style/image_language" />
        </RelativeLayout>

        <View style="@style/common_line" />

        <RelativeLayout
            android:id="@+id/japanese"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView

                style="@style/text_content"
                android:text="@string/japanese_choose" />

            <ImageView
                android:id="@+id/japanese_img"
                style="@style/image_language" />
        </RelativeLayout>

        <View style="@style/common_line" />

        <RelativeLayout
            android:id="@+id/korean"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView

                style="@style/text_content"
                android:text="@string/korean_choose" />

            <ImageView
                android:id="@+id/korean_img"
                style="@style/image_language" />
        </RelativeLayout>

        <View style="@style/common_line" />


        <RelativeLayout
            android:id="@+id/latin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView

                style="@style/text_content"
                android:text="@string/latin_choose" />

            <ImageView
                android:id="@+id/latin_img"
                style="@style/image_language" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>