<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize">


        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/black_back"
            android:text="@string/back"
            android:textColor="@color/secondary_text_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings"
            android:textColor="@color/secondary_text_color"
            android:textSize="17sp" />
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/language_item"
            android:layout_width="match_parent"
            android:layout_height="56dp"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/language_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/language_setting"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/language_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/language_text"
                    android:gravity="center_vertical"
                    android:text="@string/language_notice"
                    android:textColor="@color/primary_text_color"
                    android:textSize="13sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/select_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:drawableRight="@mipmap/right_arraw"
                android:gravity="center_vertical"
                android:text=""
                android:textColor="@color/secondary_text_color"
                android:textSize="14sp" />
        </RelativeLayout>

        <View style="@style/common_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/versions_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/versions"
                android:textColor="@color/secondary_text_color"
                android:textSize="16sp" />
s
            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="2.0.0.100"
                android:textColor="@color/secondary_text_color"
                android:textSize="14sp" />

        </RelativeLayout>
    </LinearLayout>


</LinearLayout>